--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,10 +90,10 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:recyclerview-v7:23.3.0'
-    compile 'com.android.support:appcompat-v7:23.3.0'
-    compile 'com.android.support:design:23.3.0'
-    compile 'com.android.support:cardview-v7:23.3.0'
+    compile 'com.android.support:recyclerview-v7:25.3.0'
+    compile 'com.android.support:appcompat-v7:25.3.0'
+    compile 'com.android.support:design:25.3.0'
+    compile 'com.android.support:cardview-v7:25.3.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
         compile 'com.contrarywind:Android-PickerView:3.2.4'
@@ -109,4 +109,8 @@ dependencies {
     compile project(path:':autolayout')
     compile 'com.android.support:support-v4:25.0.0'
 }
+    configurations {
+        all*.exclude group: 'commons-logging', module: 'commons-logging'
+        all*.exclude group: 'commons-collections', module: 'commons-collections'
+    }
 build.mustRunAfter ':LePlayerSkin:build'
