--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,13 +17,26 @@ android {
         // but continue the build even when errors are found:
         abortOnError false
     }
-
+    signingConfigs {
+        debug {
+            storeFile file("smartsport.jks") //签名文件路径
+            storePassword "smartsport"
+            keyAlias "smartsport"
+            keyPassword "smartsport" //签名密码
+        }
+        release {
+            storeFile file("smartsport.jks") //签名文件路径
+            storePassword "smartsport"
+            keyAlias "smartsport"
+            keyPassword "smartsport" //签名密码
+        }
+    }
     defaultConfig {
         applicationId "top.smartsport.www"
-        minSdkVersion 9
+        minSdkVersion 14
         targetSdkVersion 25
         compileSdkVersion 25
-        versionCode 1
+        versionCode 2
         versionName "1.0.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         ndk {
@@ -32,9 +45,9 @@ android {
         }
         manifestPlaceholders = [
                 JSHARE_PKGNAME : applicationId,
-                JPUSH_APPKEY : "你的appkey", //极光控制台创建应用得到的AppKey.
+                JPUSH_APPKEY : "5d9e5476b83fc95046e1c2ba", //极光控制台创建应用得到的AppKey.
                 JPUSH_CHANNEL : "developer-default", //暂时填写默认值即可.
-                TENCENT_APPID: "QQ开发者应用的appID",//腾讯开放平台注册应用得到的appId
+                TENCENT_APPID: "1106274178",//腾讯开放平台注册应用得到的appId
         ]
         multiDexEnabled true
 
@@ -42,13 +55,17 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-project.txt'
+            signingConfig signingConfigs.debug
+        }
+        debug {
+            signingConfig signingConfigs.debug
         }
     }
 
     productFlavors {
         smartsport {
-            versionCode 1
+            versionCode 2
             versionName "1.0.1"
         }
     }
@@ -81,6 +98,7 @@ repositories {
 
 
 dependencies {
+    compile 'com.github.Rukey7:IjkPlayerView:1+'
     compile 'cn.jiguang.sdk:jshare:1.2.0'  // 此处以JShare 1.1.1 版本为例，具体版本请参考压缩包libs的jar包版本。
     compile 'cn.jiguang.sdk:jshare-qqmodel:1.2.0'  // 此处以jshare-qqmodel 1.1.1 版本为例，具体版本请参考压缩包libs的jar包版本。
     compile 'cn.jiguang.sdk:jshare-wechatmodel:1.2.0'  // 此处以jshare-wechatmodel 1.1.1 版本为例，具体版本请参考压缩包libs的jar包版本。
@@ -108,6 +126,11 @@ dependencies {
 
     compile project(path:':autolayout')
     compile 'com.android.support:support-v4:25.0.0'
+    compile project(path: ':Android-PullToRefresh')
+    compile 'cn.jiguang.sdk:janalytics:1.1.1' // 此处以JAnalytics 1.1.1 版本为例。
+    compile files('libs/pinyin4j-2.5.0.jar')
+    compile files('libs/wechat-sdk-android-withView-mta-1.0.2.jar')
+//    compile files('libs/libammsdk.jar')
 }
     configurations {
         all*.exclude group: 'commons-logging', module: 'commons-logging'
