--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="top.smartsport.www">
 
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <!-- 高德地图定位 -->
@@ -93,7 +95,7 @@
             android:name="com.lecloud.skin.activity.FeedBackActivity"
             android:configChanges="keyboard|screenSize|orientation|layoutDirection"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.NoTitleBar"></activity>
+            android:theme="@android:style/Theme.NoTitleBar" />
 
         <!-- 欢迎页 -->
         <activity android:name=".activity.WelcomeActivity">
@@ -151,8 +153,7 @@
             android:label="@string/label_account_set" /> <!-- 账户设置 -->
         <activity
             android:name=".activity.MyOrderActivity"
-            android:label="我的订单"
-             /> <!-- 我的订单 -->
+            android:label="我的订单" /> <!-- 我的订单 -->
         <activity
             android:name=".activity.OrderDetailsActivity"
             android:label="我的订单" /> <!-- 我的订单 -->
@@ -160,6 +161,9 @@
         <activity
             android:name=".activity.AddMemberActivity"
             android:label="我的球队" />
+        <activity
+            android:name=".activity.AddMemberDetailActivity"
+            android:label="添加新球员" />
         <!-- 设置 -->
         <activity
             android:name=".activity.SetActivity"
@@ -180,7 +184,8 @@
         <!-- 我的视频 -->
         <activity
             android:name=".activity.MySPActivity"
-            android:label="@string/label_my_sp" />
+            android:label=
+                "@string/label_my_sp" />
         <!-- 娱乐 -->
         <activity
             android:name=".activity.MyYLActivity"
@@ -206,7 +211,8 @@
         <!-- 视频详情 -->
         <activity
             android:name=".activity.BSVideoActivity"
-            android:label="@string/label_bs_detail" />
+            android:label="比赛视频"
+            android:screenOrientation="portrait" />
 
         <!-- 我要报名 -->
         <activity
@@ -251,6 +257,15 @@
         <activity
             android:name=".activity.QDHomeActivity"
             android:label="@string/label_qd_home" />
+        <activity
+            android:name=".activity.StarDetailActivity"
+            android:label="球星详情" />
+        <activity
+            android:name=".activity.CoachDetailActivity"
+            android:label="教练详情" />
+        <activity
+            android:name=".activity.ConsultDetailActivity"
+            android:label="资讯详情" />
         <!-- 直播详情 -->
         <activity
             android:name=".activity.ZBDetailActivity"
@@ -258,14 +273,114 @@
             android:label="@string/label_zb_detail" />
         <!-- 乐视直播 -->
         <activity android:name=".activity.LeTvPlayActivity" />
+        <!-- 比赛报名 -->
+        <activity android:name=".activity.BSSignUpActivity"
+            android:label="赛事报名"
+            />
 
         <!-- 推送消息设置 -->
         <activity
             android:name=".activity.TSXXSetActivity"
             android:label="@string/label_tsxx_set" />
-        <activity android:name=".activity.BSDetailBMActivity"></activity>
-        <activity android:name=".activity.BSPictureActivity"></activity>
-        <activity android:name="cn.android.gallery.ImageViewActivity"></activity>
+        <!-- 帮助中心 -->
+        <activity
+            android:name=".activity.HelpCenterActivity"
+            android:label="帮助中心" />
+        <activity android:name=".activity.BSDetailBMActivity" />
+        <activity android:name=".activity.BSPictureActivity" />
+        <activity
+            android:name="cn.jiguang.share.android.ui.JiguangShellActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:exported="true"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:windowSoftInputMode="stateHidden|adjustResize">
+
+            <!-- Optional QQ分享回调 -->
+            <!-- scheme为“tencent”前缀再加上QQ开发者应用的appID；例如appID为123456，则scheme＝“tencent123456” -->
+            <intent-filter>
+                <data android:scheme="tencent1106274178" />
+
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.BROWSABLE" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+
+            <!-- Optional 新浪微博分享回调 -->
+            <intent-filter>
+                <action android:name="com.sina.weibo.sdk.action.ACTION_SDK_REQ_ACTIVITY" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+
+            <!-- Optional 新浪微博私信回调 -->
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="sinaweibo"
+                    android:scheme="jsharesdk" />
+            </intent-filter>
+        </activity>
+        <!-- Optional 微信分享回调,wxapi必须在包名路径下，否则回调不成功 -->
+        <activity
+            android:name=".wxapi.WXEntryActivity"
+            android:exported="true"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+
+        <activity
+            android:name=".activity.ActivitySignUp"
+            android:label="青训报名" />
+        <activity
+            android:name=".activity.ActivityOrderConfirm"
+            android:label="@string/confirm_title" />
+        <activity
+            android:name=".activity.ActivityTrainingDetails"
+            android:label="@string/details_title" />
+        <activity
+            android:name=".activity.ActivityAbout"
+            android:label="@string/about_title" />
+
+
+        <activity
+        android:name=".base.ShareActivity"
+        android:exported="true"
+        android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+        <!-- Required. For publish channel feature -->
+        <!-- JPUSH_CHANNEL 是为了方便开发者统计APK分发渠道。 -->
+        <!-- 例如: -->
+        <!-- 发到 Google Play 的APK可以设置为 google-play; -->
+        <!-- 发到其他市场的 APK 可以设置为 xxx-market。 -->
+        <!-- 目前这个渠道统计功能的报表还未开放。 -->
+        <meta-data
+            android:name="JPUSH_CHANNEL"
+            android:value="developer-default" />
+        <!-- Required. AppKey copied from Portal -->
+        <meta-data  tools:replace="android:value"
+            android:name="JPUSH_APPKEY"
+            android:value="5d9e5476b83fc95046e1c2ba" />
+        <activity
+            android:name="com.alipay.sdk.app.H5PayActivity"
+            android:configChanges="orientation|keyboardHidden|navigation"
+            android:exported="false"
+            android:screenOrientation="behind" >
+        </activity>
+        <activity
+            android:name="com.alipay.sdk.auth.AuthActivity"
+            android:configChanges="orientation|keyboardHidden|navigation"
+            android:exported="false"
+            android:screenOrientation="behind" >
+        </activity>
+
+        <activity
+            android:name=".wxapi.WXPayEntryActivity"
+            android:exported="true"
+            android:launchMode="singleTop"/>
     </application>
 
 </manifest>
