--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -491,7 +491,10 @@
             android:label="在线视频" />
 		<activity android:name=".activity.AllJiaolianActivity" android:label="全部教练"></activity>
         <activity android:name=".activity.AllKechenActivity" android:label="全部课程" ></activity><activity android:name=".activity.ActivityDataAnalysis" android:label="数据分析"></activity>
-
+        <!-- 服务协议-->
+        <activity
+            android:name=".activity.AboutServiceActivity"
+            android:label="服务协议" />
     </application>
 
 </manifest>
