--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,11 @@
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
 
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+    <uses-permission android:name="android.permission.MANAGE_ACCOUNTS"/>
+
     <application
         android:name=".base.BaseApplication"
         android:allowBackup="true"
@@ -495,6 +500,11 @@
         <activity
             android:name=".activity.AboutServiceActivity"
             android:label="服务协议" />
+
+        <!-- 选择头像 -->
+        <activity
+            android:name=".activity.ActivityChooseIcon"
+            android:theme="@style/my_dialog"/>
     </application>
 
 </manifest>
