--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -491,13 +491,23 @@
         <activity
             android:name=".activity.ActivityDataAnalysis"
             android:label="数据分析" />
+        <!-- 购买会员 -->
+        <activity
+            android:name=".activity.BuyVipActivity"
+            android:label="购买会员" />
         <!-- 在线视频 -->
         <activity
             android:name=".activity.ActivityOnLineVideo"
             android:label="在线教案" />
-		<activity android:name=".activity.AllJiaolianActivity" android:label="全部教练"></activity>
-        <activity android:name=".activity.AllKechengActivity" android:label="全部课程" ></activity>
-        <activity android:name=".activity.ActivityDataAnalysis" android:label="数据分析"></activity>
+        <activity
+            android:name=".activity.AllJiaolianActivity"
+            android:label="全部教练"></activity>
+        <activity
+            android:name=".activity.AllKechengActivity"
+            android:label="全部课程"></activity>
+        <activity
+            android:name=".activity.ActivityDataAnalysis"
+            android:label="数据分析"></activity>
         <!-- 服务协议-->
         <activity
             android:name=".activity.AboutServiceActivity"
@@ -506,7 +516,7 @@
         <!-- 选择头像 -->
         <activity
             android:name=".activity.ActivityChooseIcon"
-            android:theme="@style/my_dialog"/>
+            android:theme="@style/my_dialog" />
     </application>
 
 </manifest>
