--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -521,7 +521,7 @@
         <!-- 购买定制视频 -->
         <activity
             android:name=".activity.ActivityBuyCustomVedio"
-            android:theme="@style/my_dialog" />
+            android:label="购买定制视频" />
     </application>
 
 </manifest>
