--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,7 +113,6 @@ repositories {
 dependencies {
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.android.support:multidex:1.0.0'
-
     compile 'com.github.Rukey7:IjkPlayerView:1+'
     compile 'cn.jiguang.sdk:jshare:1.2.0'
     // 此处以JShare 1.1.1 版本为例，具体版本请参考压缩包libs的jar包版本。
@@ -125,8 +124,8 @@ dependencies {
     // 此处以jshare-sinamodel 1.1.1 版本为例，具体版本请参考压缩包libs的jar包版本。
     compile 'cn.jiguang.sdk:jcore:1.1.5'
     // 此处以JCore 1.1.5版本为例，具体版本请参考压缩包libs的jar包版本。
-
-    compile 'cn.jiguang.sdk:jpush:3.0.3'  // 此处以JPush 3.0.3 版本为例。
+    compile 'cn.jiguang.sdk:jpush:3.0.3'
+    // 此处以JPush 3.0.3 版本为例。
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -135,8 +134,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.0'
     compile 'com.android.support:design:25.3.0'
     compile 'com.android.support:cardview-v7:25.3.0'
-
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
     compile 'com.contrarywind:Android-PickerView:3.2.4'
     compile files('libs/pinyin4j-2.5.0.jar')
@@ -157,12 +154,12 @@ dependencies {
     compile files('libs/alipaySdk-20160223.jar')
     compile files('libs/wechat-sdk-android-with-mta-1.0.2.jar')
     compile files('libs/json-lib-2.4-jdk15.jar')
-
     compile 'org.xutils:xutils:3.5.0'
-
     compile 'com.tencent.bugly:crashreport_upgrade:latest.release'
-//其中latest.release指代最新版本号，也可以指定明确的版本号，例如1.2.0
-    compile 'com.tencent.bugly:nativecrashreport:latest.release' //
+    //其中latest.release指代最新版本号，也可以指定明确的版本号，例如1.2.0
+    compile 'com.tencent.bugly:nativecrashreport:latest.release'
+    //
+    compile 'com.android.support:support-annotations:25.3.1'
 }
 configurations {
 
