--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,7 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         ndk {
             // 设置支持的SO库架构
-            abiFilters 'armeabi-v7a', 'x86','armeabi'
+            abiFilters 'armeabi-v7a', 'x86'
         }
         manifestPlaceholders = [
                 JPUSH_PKGNAME : "top.smartsport.www",
