--- a/app/build.gradle
+++ b/app/build.gradle
@@ -160,6 +160,7 @@ dependencies {
     compile 'com.tencent.bugly:nativecrashreport:latest.release'
     //
     compile 'com.android.support:support-annotations:25.3.1'
+    compile 'com.google.code.gson:gson:2.6.2'
 }
 configurations {
 
