--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,4 @@
 /captures
 .externalNativeBuild
 app/src/main/java/app/auto
-app/src/main/res/layout/activity_auto_*.xml
+app/src/main/res/layout/*_auto_*.xml
