--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -86,8 +86,8 @@
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar" />
 
-        <!-- 欢迎页 -->
-        <activity android:name=".activity.WelcomeActivity">
+        <!-- 欢迎页 ActionUIActivity -->
+        <activity android:name="app.auto.ActionUIActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -530,6 +530,7 @@
 
         <!-- 选择头像 -->
         <activity
+
             android:name=".activity.ActivityChooseIcon"
             android:theme="@style/my_dialog" />
 
@@ -537,7 +538,7 @@
         <activity
             android:name=".activity.ActivityBuyCustomVedio"
             android:label="购买定制视频" />
-        <activity android:name="app.auto.ActionUIActivity"></activity>
+        <!--<activity android:name="app.auto.ActionUIActivity" android:label="" ></activity>-->
     </application>
 
 </manifest>
